--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "url": "git@github.com:theblacksmith/typescript-require.git"
   },
   "dependencies": {
-    "typescript": ">= 0.8.2"
+    "typescript": "^1.5.3"
   },
   "keywords": [
     "typescript",
